--- a/appel.html
+++ b/appel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Product Detail</title>
-    <link rel="stylesheet" href="./product.css">
+    <link rel="stylesheet" href="./appel.css">
 </head>
 
 <body>
@@ -17,7 +17,9 @@
             jaren 60 van de 20e eeuw, via Jef De Coster (1930-2010)
         </p>
         <p class="product-price">€1.99 per stuk</p>
-        <button class="buy-button">Koop</button>
+        <a href="./info.html" id="KIMB" class="buy-button">Meer info</a>
+        <button id="KAMM" class="buy-button" onclick="alert('Appel succesvol gekocht')">Koop appel</button>
+        <a href="./home.html" id="KTOM" class="buy-button">Ga terug</a>
     </article>
 </body>
 
