--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Welkom op de gesimuleerde webshop</h1>
-    <p>Onze winkel specialiseert in het verkopen van fruit, ga naar onze product pagina om producten te kopen</p>
-    <a href="./product.html" class="cta-button">Ga naar Producten</a>
+    <button id="KILB" class="cta-button">Meer info</button>
+    <a href="./appel.html" id="KALM" class="cta-button">Koop appelen</a>
+    <a href="./peer.html" id="KPLO" class="cta-button">Koop peren</a>
 </body>
 
 </html>
