Change home to index.html

--- a/appel.html
+++ b/appel.html
@@ -19,7 +19,7 @@
         <p class="product-price">€1.99 per stuk</p>
         <a href="./info.html" id="KIMB" class="buy-button">Meer info</a>
         <button id="KAMM" class="buy-button" onclick="alert('Appel succesvol gekocht')">Koop appel</button>
-        <a href="./home.html" id="KTOM" class="buy-button">Ga terug</a>
+        <a href="./index.html" id="KTOM" class="buy-button">Ga terug</a>
     </article>
 </body>
 
