--- a/peer.html
+++ b/peer.html
@@ -18,7 +18,7 @@
         <p class="product-price">€1.99 per stuk</p>
         <a href="./info.html" id="KIRB" class="buy-button">Meer info</a>
         <button id="KPRM" class="buy-button" onclick="alert('Peer succesvol gekocht')">Koop peer</button>
-        <a href="./home.html" id="KTRO" class="buy-button">Ga terug</a>
+        <a href="./index.html" id="KTRO" class="buy-button">Ga terug</a>
     </article>
 </body>
 
