--- a/peer.html
+++ b/peer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Product Detail</title>
     <link rel="stylesheet" href="./peer.css">
+    <script src="./coordinates.js" defer></script>
     <!-- Hotjar Tracking Code for Site 6413785 (name missing) -->
 
 </head>
